--- a/.github/workflows/python_package.yml
+++ b/.github/workflows/python_package.yml
@@ -9,7 +9,7 @@ jobs:
     strategy:
       max-parallel: 6
       matrix:
-        python-version: [3.6, 3.7, 3.8]
+        python-version: [3.9]
 
     steps:
     - uses: actions/checkout@v1
